# TlantiCAD-Studio-V0.1-alpha

./: .gitignore  README.md  package.json
Tauri/: Cargo.toml  DentalDB_V3_default_260312_234357.sql  build-meshlib-wasm.sh  local_share.rs  tauri.conf.json
Tauri/backend/: README.md  __init__.py
Tauri/backend/app/: __init__.py  main.py
Tauri/backend/app/core/: db.py  security.py  settings.py
Tauri/backend/app/models/: __init__.py  inference_result.py  study.py  tool_setting.py
Tauri/backend/app/services/: __init__.py  dicom_service.py  inference_service.py  task_service.py
Tauri/backend/app/workers/: __init__.py  celery_app.py
Tauri/backend/ml/: __init__.py
Tauri/backend/ml/configs/: __init__.py
Tauri/backend/modules/: __init__.py
Tauri/backend/modules/dicom/: __init__.py  anonymization.py  loader.py
Tauri/backend/modules/explainability/: __init__.py  gradcam.py
Tauri/backend/modules/inference/: __init__.py  base.py  onnx_backend.py  pytorch_backend.py
Tauri/backend/modules/ml_tools/: __init__.py  pneumonia_tool.py  registry.py
Tauri/backend/modules/postprocessing/: __init__.py  interpretation.py
Tauri/backend/modules/preprocessing/: __init__.py  pipeline.py
Tauri/backend/python/: dicom_healthcheck.py  dicom_manifest.py  requirements-ml-dev.txt  requirements-slicer-ai.txt  requirements-trame.txt  requirements.txt  slicer_automated_dental_runtime.py  trame_slicer_sidecar.py  vtk_healthcheck.py
Tauri/capabilities/: default.json  macos.json  windows.json
Tauri/meshlib-wasm/: package.json
Tauri/meshlib-wasm/src/: index.ts
Tauri/resources/Bitmaps/Operations/: Thumbs.db
Tauri/resources/PredefinedElements/: InitElements.xml  UserElements.xml
Tauri/sql/: 001_core_schema.sql  002_tlantidb_clinical_order_schema.sql
Tauri/src/: Cargo.toml  Cargo.toml.template  README.md  abutment_presets.rs  asset_vault_streaming.rs  backend_integrations.rs  backend_topology.rs  backend_workspace.rs  cad_abutment.rs  cad_abutment_production.rs  cad_abutment_real.rs  cad_alignment.rs  cad_articulator_real.rs  cad_bridge_connector.rs  cad_compute_router.rs  cad_core.rs  cad_crown_bottom.rs  cad_crown_feedback.rs  cad_crown_pipeline.rs  cad_csg.rs  cad_dicom_seg_and_guide.rs  cad_endo_real.rs  cad_freeform_brush.rs  cad_freeform_specialty.rs  cad_implant_manager.rs  cad_insertion_axis.rs  cad_margin_real.rs  cad_mesh_kernel.rs  cad_parameters_store.rs  cad_shell.rs  cad_show_distances_real.rs  case_repository.rs  case_storage.rs  case_watcher.rs  chat_persistence.rs  clinical_jobs.rs  dental_backend_runtime.rs  dental_model_seg.rs  dicom_jobs.rs  dicom_segmentation_jobs.rs  (+12 more)
Tauri/src/accounting/: Cargo.toml
Tauri/src/accounting/src/: error.rs  lib.rs  service.rs
Tauri/src/agenda/: Cargo.toml
Tauri/src/agenda/src/: error.rs  lib.rs  service.rs
Tauri/src/bindings/: Angle.ts  AngleUnit.ts  BoundingBox.ts  EntityId.ts  FaceInfo.ts  Length.ts  LengthUnit.ts  MeshData.ts  Plane.ts  SurfaceType.ts  UnitSystem.ts  Vec2.ts  Vec3.ts
Tauri/src/cad/: Cargo.toml  build.rs
Tauri/src/cad-core/: Cargo.toml
Tauri/src/cad-core/src/: error.rs  lib.rs
Tauri/src/cad-db/: Cargo.toml
Tauri/src/cad-db/src/: lib.rs  migrations.rs  models.rs  repository.rs
Tauri/src/cad-io/: Cargo.toml
Tauri/src/cad-io/src/: lib.rs  obj.rs  ply.rs  stl.rs
Tauri/src/cad-render/: Cargo.toml
Tauri/src/cad-render/src/: camera.rs  lib.rs  scene.rs
Tauri/src/cad/cpp/: bridge.cpp
Tauri/src/cad/src/: analysis.rs  config.rs  curves.rs  dimensions.rs  drawing.rs  error.rs  export.rs  ffi.rs  lib.rs  mesh.rs  operations.rs  primitives.rs  projection.rs  section.rs  shape.rs  step_io.rs
Tauri/src/cad/tests/: integration_test.rs
Tauri/src/clinical/: Cargo.toml
Tauri/src/clinical/src/: error.rs  lib.rs  service.rs
Tauri/src/commands/: Cargo.toml
Tauri/src/commands/src/: database.rs  lib.rs  mesh.rs  (+4 more)
Tauri/src/core/: Cargo.toml
Tauri/src/database/: Cargo.toml
Tauri/src/db/: Cargo.toml
Tauri/src/dental/: Cargo.toml
Tauri/src/dental-commands/: Cargo.toml
Tauri/src/dental-core/: Cargo.toml
Tauri/src/dental-database/: Cargo.toml
Tauri/src/dental-export/: Cargo.toml
Tauri/src/dental-imaging/: Cargo.toml
Tauri/src/dicom/: Cargo.toml
Tauri/src/export/: Cargo.toml
Tauri/src/gpu/: Cargo.toml
Tauri/src/ifc/: Cargo.toml
Tauri/src/mesh/: Cargo.toml  build.rs
Tauri/src/meshlib-bridge/: Cargo.toml
Tauri/src/mimesis/: Cargo.toml
Tauri/src/ml-runtime/: Cargo.toml
Tauri/src/patients/: Cargo.toml
Tauri/src/pos/: Cargo.toml
Tauri/src/python-bridge/: Cargo.toml
Tauri/src/sidecar-manager/: Cargo.toml
Tauri/src/system-info/: Cargo.toml
Tauri/src/tlanticad-abutment/: Cargo.toml
Tauri/src/tlanticad-ai/: Cargo.toml
Tauri/src/tlanticad-alignment/: Cargo.toml
Tauri/src/tlanticad-articulator/: Cargo.toml
Tauri/src/tlanticad-bar/: Cargo.toml
Tauri/src/tlanticad-bite-splint/: Cargo.toml
Tauri/src/tlanticad-bridge/: Cargo.toml
Tauri/src/tlanticad-compute/: Cargo.toml
Tauri/src/tlanticad-config/: Cargo.toml
Tauri/src/tlanticad-core/: Cargo.toml
Tauri/src/tlanticad-crown/: Cargo.toml
Tauri/src/tlanticad-dental/: Cargo.toml
Tauri/src/tlanticad-denture/: Cargo.toml
Tauri/src/tlanticad-dicom/: Cargo.toml
Tauri/src/tlanticad-endo/: Cargo.toml
Tauri/src/tlanticad-freeform/: Cargo.toml
Tauri/src/tlanticad-geometry/: Cargo.toml
Tauri/src/tlanticad-implant/: Cargo.toml
Tauri/src/tlanticad-io/: Cargo.toml
Tauri/src/tlanticad-library/: Cargo.toml
Tauri/src/tlanticad-manufacturing/: Cargo.toml
Tauri/src/tlanticad-mesh/: Cargo.toml
Tauri/src/tlanticad-model/: Cargo.toml
Tauri/src/tlanticad-notation/: Cargo.toml
Tauri/src/tlanticad-perf/: Cargo.toml
Tauri/src/tlanticad-project/: Cargo.toml
Tauri/src/tlanticad-python/: Cargo.toml
Tauri/src/tlanticad-rendering/: Cargo.toml
Tauri/src/tlanticad-telescope/: Cargo.toml
Tauri/src/tlanticad-tensor/: Cargo.toml
Tauri/src/tlanticad-waxup/: Cargo.toml
Tauri/src/tlanticad-workflow/: Cargo.toml
Tauri/src/tlanticad-workspace/: Cargo.toml  fix.py  fix_fields.py  fix_lib.py  fix_repo.py
(+4911 files in other folders)
