[package]
name = "accounting"
version = "0.1.0"
edition = "2021"
description = "Accounting services for TlantiStudio Dental"

[dependencies]
dental-core = { path = "../dental-core" }
dental-database = { path = "../dental-database" }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
rust_decimal = { version = "1.37", features = ["serde"] }
r2d2 = "0.8"
