[package]
name = "cad-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
nalgebra = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bytemuck = { workspace = true }
rayon = { workspace = true }
derive_more = { workspace = true }
