[package]
name = "cad-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cad-core = { path = "../cad-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
