[package]
name = "dental-core"
version = "0.1.0"
edition = "2021"
description = "Core domain models for TlantiStudio Dental Clinic Management"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.16", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
rust_decimal = { version = "1.37", features = ["serde"] }
strum = { version = "0.26", features = ["derive"] }
validator = { version = "0.20", features = ["derive"] }

# Medical imaging I/O (DICOM, NIfTI, etc.)
medrs = "0.1.2"

# Dental notation system conversions (FDI, Universal, Palmer)
dental-notation = "1.0.0"
