[package]
name = "system-info"
version = "0.1.0"
edition = "2021"
description = "System/GPU/WebGPU detection for TlantiStudio"

[dependencies]
# System information (CPU, RAM, disks)
sysinfo = "0.33"

# GPU / WebGPU detection
wgpu = { version = "24" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tokio = { version = "1.45", features = ["rt"] }
