[package]
name = "tlanticad-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TlantiCAD AI Module"

[features]
default = []
cuda = []

[dependencies]
tlanticad-core = { workspace = true }
tlanticad-mesh = { workspace = true }
nalgebra = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
